# acapella-maker

./: .gitignore  README.md  SUMMARY.md  acapella  acapella-maker  acapella-maker.spec  acapella.spec  acapella_gui.spec  acapella_maker_gui.spec  build.bat  build.ps1  build.sh  pyproject.toml
.github/workflows/: build.yml  test.yml
scripts/: build.py
src/acapella/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
src/acapella/core/: __init__.py  audio_io.py  bpm_detector.py  pipeline.py  silence_trimmer.py  vocal_extractor.py  youtube.py
src/acapella/gui/: __init__.py  colors.py  main_window.py
src/acapella/gui/widgets/: __init__.py  input_section.py  options_section.py  output_section.py  progress_section.py  results_section.py
src/acapella/gui/workers/: __init__.py  bpm_worker.py  download_worker.py  extraction_worker.py  title_worker.py
src/acapella/models/: __init__.py  result.py
src/acapella_maker/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
src/acapella_maker/core/: __init__.py  audio_io.py  bpm_detector.py  pipeline.py  silence_trimmer.py  vocal_extractor.py  youtube.py
src/acapella_maker/gui/: AppIcon.icns  __init__.py  colors.py  main_window.py
src/acapella_maker/gui/widgets/: __init__.py  input_section.py  options_section.py  output_section.py  progress_section.py  results_section.py
src/acapella_maker/gui/workers/: __init__.py  base_worker.py  bpm_worker.py  extraction_worker.py
src/acapella_maker/models/: __init__.py  result.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_cli.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_audio_io.py  test_bpm_detector.py  test_exceptions.py  test_result.py  test_silence_trimmer.py  test_youtube.py
