[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acapella"
version = "0.2.0"
description = "Extract + download acapella samples from YouTube with local stem splitting"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "kojin" }
]
keywords = ["audio", "vocals", "acapella", "demucs", "bpm", "dj", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "demucs>=4.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "certifi>=2023.0.0",
    "yt-dlp>=2023.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]
gui = [
    "PySide6>=6.5.0",
]

[project.scripts]
acapella = "acapella.cli:app"

[project.gui-scripts]
acapella-gui = "acapella.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acapella"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/acapella"]
branch = true
omit = [
    "*/gui/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
